firmware_sources = files(
    'main.cpp',
    'drivers/JtagDev.cpp',
    'drivers/JtagDev.dtrig.cpp',
    'drivers/SbwDev.cpp',
    'drivers/SbwDev.tim.cpp',
    'drivers/TapDev430.cpp',
    'drivers/TapDev430X.cpp',
    'drivers/TapDev430Xv2.cpp',
    'drivers/TapDev430Xv2_1377.cpp',
    'drivers/TapMcu.cpp',
    'drivers/TapPlayer.cpp',
    'ui/CmdDb.cpp',
    'ui/MonitorCmd.cpp',
    'ui/Gdb.cpp',
    'util/Breakpoints.cpp',
    'util/ChipProfile.cpp',
    'util/crc32.cpp',
    'util/Msp430Regs.cpp',
    'util/Expr.cpp',
    'util/GdbData.cpp',
    'util/Parser.cpp',
    'util/WaveSet.cpp',
)
